# Amphoreus

./: .gitignore  AMPHOREUS_DESIGN_SPEC.md  CLAUDE.md  README.md  README.zh-CN.md
backend/: .gitignore  cli.py  mcp_server.py  pyproject.toml  requirements.txt  run_dogfood.py
backend/.omc/state/: agent-replay-0322b52b-c279-49ab-b096-84cd8e194108.jsonl  last-tool-error.json  mission-state.json  subagent-tracking.json
backend/app/: main.py
backend/app/api/: __init__.py  characters.py  guardian.py  pipeline.py  plot.py  projects.py  sandbox.py  scene.py  world.py  writer.py
backend/app/cli/: __init__.py  console.py  display.py  main.py  picker.py  pipelines_plot.py  pipelines_story.py  pipelines_world.py  session.py
backend/app/core/: api_keys.py  circuit_breaker.py  config.py  dependencies.py  i18n.py  llm_client.py
backend/app/models/: character.py  character_card.py  character_converter.py
backend/tests/: conftest.py  test_adaptive_patterns.py  test_aftermath_pipeline.py  test_canon_adjudicator.py  test_canon_injection.py  test_canon_persistence.py  test_canon_schema.py  test_canon_verifier.py  test_character_card.py  test_circuit_breaker.py  test_cliche_integration.py  test_cliche_scanner.py  test_core.py  test_deviation_classifier.py  test_entity_events.py  test_episodic_memory.py  test_fact_checker.py  test_foreshadowing.py  test_foreshadowing_injection.py  test_graph_inference.py  test_inferred_triples_kuzu_roundtrip.py  test_llm_client_retry.py  test_logic_reviewer.py  test_mcp_server.py  test_narrative_debt.py  test_narrative_extraction.py  test_persona_injector.py  test_phase_hourglass.py  test_picker.py  test_pipeline_api.py  test_pipeline_orchestrator.py  test_pipeline_resume_canon.py  test_pipeline_scene_resume.py  test_pipeline_stash.py  test_post_write_extraction.py  test_pov_firewall.py  test_projects_api.py  test_prop_lifecycle.py  test_reader_sim.py  test_relationship_trend.py  (+12 more)
frontend/: index.html  (+5 more)
(+197 files in other folders)
