[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "charset-normalizer>=3.4.7",
    "cryptography>=48.0.0",
    "fastapi>=0.136.1",
    "kuzu>=0.11.3",
    "openai>=2.36.0",
    "openviking>=0.3.14",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "uvicorn[standard]>=0.46.0",
]
